# cpg-flow

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .pypirc  404.html  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  index.html  main.py  objects.inv  pyproject.toml  requirements-dev.txt  shields.json  sitemap.xml  sonar-project.properties  versions.json
.github/: dependabot.yml  renovate-config.json  sonarqube-template.md
.github/assets/: sonarqube-template.md
.github/scripts/: check_release_age.py  sonarqube-fetch.sh
.github/sonarqube/: sonarqube-fetch.sh  sonarqube-template.md
.github/workflows/: cleanup-sonarqube-project.yaml  dependabot-release-age.yaml  docker.yaml  document_workflows.py  hail.yaml  lint.yaml  manual-test.yaml  package.yaml  release.yaml  renovate.yaml  sbom.yaml  security.yaml  test.yaml  update-badges.yaml  web-docs.yaml  web_docs.yaml
0.1.2/: index.html
0.1.2/changelog/: index.html
0.1.2/considerations-limitations/: index.html
0.1.2/installation/: index.html
0.1.2/reference/: index.html
0.1.2/search/: search_index.json
0.1.2/tests/: index.html
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/changelog/: index.html
0.1.3/code-analysis-consistency/: index.html
0.1.3/considerations-limitations/: index.html
0.1.3/docker/: index.html
0.1.3/installation/: index.html
0.1.3/reference/: index.html
0.1.3/search/: search_index.json
0.1.3/tests/: index.html
0.1.3/usage/: index.html
0.1.3/workflows/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/changelog/: index.html
0.2.0/code-analysis-consistency/: index.html
0.2.0/considerations-limitations/: index.html
0.2.0/docker/: index.html
0.2.0/installation/: index.html
0.2.0/reference/: index.html
0.2.0/tests/: index.html
0.2.0/usage/: index.html
0.2.0/workflows/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/changelog/: index.html
0.2.1/code-analysis-consistency/: index.html
0.2.1/considerations-limitations/: index.html
0.2.1/docker/: index.html
0.2.1/installation/: index.html
0.2.1/reference/: index.html
0.2.1/search/: search_index.json
0.2.1/tests/: index.html
0.2.1/usage/: index.html
0.2.1/workflows/: index.html
0.2.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.2/changelog/: index.html
0.2.2/code-analysis-consistency/: index.html
0.2.2/considerations-limitations/: index.html
0.2.2/docker/: index.html
0.2.2/installation/: index.html
0.2.2/reference/: index.html
0.2.2/search/: search_index.json
0.2.2/tests/: index.html
0.2.2/usage/: index.html
0.2.2/workflows/: index.html
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/changelog/: index.html
0.2.3/code-analysis-consistency/: index.html
0.2.3/considerations-limitations/: index.html
0.2.3/docker/: index.html
0.2.3/installation/: index.html
0.2.3/reference/: index.html
0.2.3/search/: search_index.json
0.2.3/tests/: index.html
0.2.3/usage/: index.html
0.2.3/workflows/: index.html
0.2.4/: 404.html  index.html  objects.inv  sitemap.xml
0.2.4/changelog/: index.html
0.2.4/code-analysis-consistency/: index.html
0.2.4/considerations-limitations/: index.html
0.2.4/docker/: index.html
0.2.4/installation/: index.html
0.2.4/reference/: index.html
0.2.4/tests/: index.html
0.2.4/usage/: index.html
0.2.4/workflows/: index.html
0.2.5/: 404.html  index.html  sitemap.xml
0.2.5/changelog/: index.html
0.2.5/code-analysis-consistency/: index.html
0.2.5/considerations-limitations/: index.html
0.2.5/docker/: index.html
0.2.5/installation/: index.html
0.2.5/reference/: index.html
0.2.5/search/: search_index.json
0.2.5/tests/: index.html
0.2.5/usage/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
0.3.2/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html  sitemap.xml
1.1.1/: 404.html  index.html  sitemap.xml
1.2.0/: 404.html  index.html  sitemap.xml
1.2.1/: 404.html  index.html  sitemap.xml
1.2.2/: 404.html  index.html  sitemap.xml
1.2.3/: 404.html  index.html  sitemap.xml
1.3.0/: 404.html  index.html  sitemap.xml
1.3.1/: 404.html  index.html  sitemap.xml
changelog/: index.html
code-analysis-consistency/: index.html
considerations-limitations/: index.html
docker/: index.html
docs/: badges.yaml  document_workflows.py  search.js  update_readme.py  workflow_descriptions.yaml
installation/: index.html
latest/: 404.html  index.html
misc/: attach_disk_test.py
reference/: index.html
requirements/: dev.txt  main.txt  test.txt
search/: search_index.json
src/: __init__.py
test/: __init__.py
tests/: __init__.py  index.html  test_cohort.py  test_dump_load.py  test_metamist.py  test_multicohort.py  test_resources.py  test_status.py  test_utils.py  test_workflow.py
usage/: index.html
v0.1.3/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.3/: 404.html  index.html  sitemap.xml
v0.2.4/: 404.html  index.html  sitemap.xml
v0.2.5/: 404.html  index.html  sitemap.xml
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.1/: 404.html  index.html  sitemap.xml
v0.3.2/: 404.html  index.html  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.1/: 404.html  index.html  sitemap.xml
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.1/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
v1.1.1/: 404.html  index.html  sitemap.xml
v1.2.0/: 404.html  index.html  sitemap.xml
v1.2.1/: 404.html  index.html  sitemap.xml
v1.2.2/: 404.html  index.html  sitemap.xml
v1.2.3/: 404.html  index.html  sitemap.xml
v1.3.0/: 404.html  index.html  sitemap.xml
v1.3.1/: 404.html  index.html  objects.inv  sitemap.xml
workflows/: index.html
(+885 files in other folders)
